# python_pieces

./: create_project.bat
azure_sql_util/: .gitignore  Pipfile  README.en.md  README.ja.md  check_coverage.bat  setup.cfg
azure_sql_util/src/azure_sql_util/: __main__.py  azure_sql_util.py  copy_tables.py
azure_sql_util/tests/: test_azure_sql_util.py
loggingex/: .gitignore  Pipfile  README.en.md  README.ja.md  check_coverage.bat  setup.cfg
loggingex/src/loggingex/: __main__.py  handlers.py  logging.ini
loggingex/tests/: test_handlers.py
tornado_authex/: Pipfile  README.ja.md  README.md  Web APIの認証.md  check_coverage.bat  install.bat  python3-saml.url  setup.cfg  tornado.bat
tornado_authex/src/tornado_authex/: __main__.py  arth.py  basic_auth.py  bearer_auth.py  client_basicauth.py  client_bearerauth.py  crypt.py  handlers_basicauth.py  handlers_bearerauth.py  server.py  server_basicauth.py  server_bearerauth.py
tornado_authex/src/tornado_authex/sample/: client_basicauth.py  client_bearerauth.py  handlers_basicauth.py  handlers_bearerauth.py  server_bearerauth.py  server_formauth.py
tornado_authex/src/tornado_authex/templates/: hello.html  layout.html  login.html
tornado_authex/tests/: test___main__.py  test_arth.py  test_crypt.py
