# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = azure_sql_util
version = 0.0.2
description = 
long_description_content_type = text/markdown
long_description = file: README.ja.md
url = https://github.com/joumura/python_pieces/

[options]
packages = find:
package_dir =
    =src
install_requires =
    PySimpleGUI
    # Microsoft Visual C++ 14.0 or greater
    pyodbc

[options.packages.find]
where = src
