# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = tornado_authex
version = 0.0.1
description = 
long_description_content_type = text/markdown
long_description = file: README.ja.md
url = https://github.com/joumura/python_pieces/

[options]
packages = find:
package_dir =
    =src
install_requires =
    tornado
    ldap3
    pycryptodome

[options.packages.find]
where = src
